# perfect

./: .gitignore  Makefile  TestPerfect.hs  imperfect.gp  oeis.txt  perfect-old.hs  perfect-prev.hs  perfect.cabal  perfect.hs  stack.yaml  testPerfect.hs
Perfect/: Config.hs  Sigmas.hs  Tries.hs  Types.hs  Wall.hs
output/: 2-imperfect.txt  3-imperfect-pretty.hs  3-imperfect.txt  4-imperfect-pretty.hs  4-imperfect.txt  5-halfs-perfect.txt  6-halfs-perfect.txt  7-halfs-perfect.txt  A127724.txt  exp-inf.txt  exp-unit.txt  inf-2-perfect.txt  inf-3-perfect.txt  inf-4-perfect.txt  inf-5-perfect.txt  inf-perfect.txt  me-perfect.txt  mod-exp-inf.txt  mod-exp.txt  ou-perfect.txt  uo-3-perfect.txt  uo-perfect.txt  usup-perfect.txt
